--- a/flask_wtforms_tutorial/templates/admin.html
+++ b/flask_wtforms_tutorial/templates/admin.html
@@ -10,6 +10,15 @@
   
   <form method="POST" action="/admin">
       {{ form.csrf_token }}
+      {% if message %}
+        <p>{{ message }}</p>
+      {% endif %}
+      {% if reservation %}
+        <p>{{ reservation}}</p>
+      {% endif %}
+      {% if sales %}
+        <p>{{ sales }}</p>
+      {% endif %}
       <div class="form-field">{{ form.username.label }} {{ form.username }}
         {% if form.username.errors %}
           <ul class="errors">
