--- a/flask_wtforms_tutorial/templates/admin.html
+++ b/flask_wtforms_tutorial/templates/admin.html
@@ -6,6 +6,10 @@
 
 {% block content %}
 <div class="formwrapper">
+
+  <form method="GET" action="/">
+      <button type="submit" formmethod="GET">Home</button>
+  </form>
   <h2 class="title">Administrator Login</h2>
   
   <form method="POST" action="/admin">
