Added link to homepage

--- a/flask_wtforms_tutorial/templates/reservations.html
+++ b/flask_wtforms_tutorial/templates/reservations.html
@@ -6,6 +6,9 @@
 
 {% block content %}
 <div class="formwrapper">
+  <form method="GET" action="/">
+      <button type="submit" formmethod="GET">Home</button>
+  </form>
   <h2 class="title">Reserve Your Seat</h2>
   
   <form method="POST" action="/admin">
