Adding Joseph Collins changes

--- a/flask_wtforms_tutorial/templates/admin.html
+++ b/flask_wtforms_tutorial/templates/admin.html
@@ -18,7 +18,13 @@
         <p>{{ message }}</p>
       {% endif %}
       {% if reservation %}
-        <p>{{ reservation}}</p>
+        <table>
+        {% for item in reservation %}
+            <tr>
+                <td>{{item}}</td>
+            </tr>
+        {% endfor %}
+        </table>
       {% endif %}
       {% if sales %}
         <p>{{ sales }}</p>
