Adding Joseph Collins changes pt2

--- a/flask_wtforms_tutorial/templates/reservations.html
+++ b/flask_wtforms_tutorial/templates/reservations.html
@@ -6,18 +6,24 @@
 
 {% block content %}
 <div class="formwrapper">
+    <form method="GET" action="/">
+      <button type="submit" formmethod="GET">Home</button>
+  </form>
   <h2 class="title">Reserve Your Seat</h2>
     <!-- Area added for seating table chart. Joseph Collins -->
-    <h3>Seating Chart</h3>
+    {% if reservation %}
+        <h3>Seating Chart</h3>
         <h5>X = Reserved seat : O = Available Seat</h5>
             <table>
-            {% for item in data %}
+            {% for item in reservation %}
                 <tr>
                     <td>{{item}}</td>
                 </tr>
             {% endfor %}
             </table>
     <br>
+    {% endif %}
+
     <!-- End of added code for chart. Joseph Collins -->
   <form method="POST" action="/admin">
       {{ form.csrf_token }}
