--- a/flask_wtforms_tutorial/templates/admin.html
+++ b/flask_wtforms_tutorial/templates/admin.html
@@ -6,10 +6,14 @@
 
 {% block content %}
 <div class="formwrapper">
+    <nav>
+        <a href="/">Home</a>
+        |
+        <a href="/admin">Admin</a>
+        |
+        <a href="/reservations">Reservations</a>
+    </nav>
 
-  <form method="GET" action="/">
-      <button type="submit" formmethod="GET">Home</button>
-  </form>
   <h2 class="title">Administrator Login</h2>
   
   <form method="POST" action="/admin">
