--- a/flask_wtforms_tutorial/templates/reservations.html
+++ b/flask_wtforms_tutorial/templates/reservations.html
@@ -14,6 +14,9 @@
         <a href="/reservations">Reservations</a>
     </nav>
   <h2 class="title">Reserve Your Seat</h2>
+     {% if message %}
+        <p>{{ message }}</p>
+      {% endif %}
     <!-- Area added for seating table chart. Joseph Collins -->
     {% if reservation %}
         <h3>Seating Chart</h3>
@@ -29,8 +32,9 @@
     {% endif %}
 
     <!-- End of added code for chart. Joseph Collins -->
-  <form method="POST" action="/admin">
+  <form method="POST" action="/reservations">
       {{ form.csrf_token }}
+
       <div class="form-field">{{ form.first_name.label }} {{ form.first_name }}
         {% if form.first_name.errors %}
           <ul class="errors">
